tests/invalid/data_loader_missing_provides.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "DataLoaderMissingProvides",
    "description": "Test case: data loader missing required 'provides' field",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadLoader": {
      "type": "gridded_data",
      "loader_id": "TestLoader"
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}